# ComfyUI-Majoor-AssetsManager

./: .coderabbit.yaml  .editorconfig  .env.example  .gitignore  .mjr_index_directory_override  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  AUDIT_AND_PATCHES.md  AUDIT_COMPATIBILITY_PATCH_PLAN.md  AUDIT_PATCH_FINAL_2026-02-12.md  CHANGELOG.md  FIXES_APPLIED.md  LICENSE  NODE_CONFIG.py  NOTICE  README.md  ROADMAP.md  VERSION  __init__.py  clean_pycache.bat  comfyui_extension.json  coverage_backend.json  eslint.config.js  eslint.config.mjs  generate_extension_json.py  knip.json  mypy.ini  node_mapping.json  nodes.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements-vector.txt  (+10 more)
.claude/: settings.local.json
.github/workflows/: ci-python.yml  compat-smoke.yml  frontend-compat-nightly.yml  nightly.yml  publish.yml  python-tests.yml  release-on-tag.yml
backend/: __init__.py  config.py  custom_roots.py  deps.py  observability.py  probe_router.py  routes_compat.py  settings.py  shared.py  tool_detect.py  utils.py
backend/routes/: __init__.py  registry.py
browser_tests/: majoor-smoke.spec.ts
docs/: AI_FEATURES.md  API_REFERENCE.md  ARCHITECTURE_MAP.md  COMPLETE_USER_GUIDE.md  CONTRIBUTING.md  CUSTOM_NODES.md  DB_MAINTENANCE.md  DEPENDENCY_POLICY.md  DESKTOP_POPUP_WORKAROUND.md  DOCUMENTATION_INDEX.md  DRAG_DROP.md  FLOATING_VIEWER_WORKFLOW_SIDEBAR.md  FRONTEND_IMPERATIVE_DESIGN.md  FRONTEND_LIFECYCLE_CONVENTIONS.md  HOTKEYS_SHORTCUTS.md  INSTALLATION.md  METADATA_VIEWER.md  MIGRATION_TS_TRACKER.md  PLAN_REFACTO_COMPLET_MAJOOR_ASSETS_MANAGER.md  PLAN_REFACTO_V2_LONG_TERME.md  PLUGIN_QUICK_REFERENCE.md  PLUGIN_SYSTEM_DESIGN.md  PLUGIN_SYSTEM_IMPLEMENTATION_SUMMARY.md  PRIVACY_OFFLINE.md  RATINGS_TAGS_COLLECTIONS.md  SEARCH_FILTERING.md  SECURITY_AUDIT_2026-02-27.md  SECURITY_ENV_VARS.md  SETTINGS_CONFIGURATION.md  SHORTCUTS.md  TESTING.md  THREAT_MODEL.md  USER_GUIDE.md  VIEWER_FEATURE_TUTORIAL.md  VUE_MIGRATION_PLAN.md  WORKFLOWS.md  WORKFLOW_SCOPE_IMPLEMENTATION_PLAN.md  graph-map-demo.html  node-stream-reactivation.md  user_guide.html
docs/adr/: 0001-error-handling-result.md  0002-comfyui-server-import-safety.md  0003-frontend-vue-ownership-runtime-bridges.md  0004-panel-runtime-split.md  0005-frontend-source-dist-truth.md  0007-bounded-contexts-layer-vocabulary.md  0008-ui-lifecycle-contract.md  0009-tags-normalization.md  README.md
experimental/vue/: Card.vue  README.md  main.js  package-lock.json  package.json  tsconfig.json  vite.config.js
js/: am_cards.js  am_context_menu.js  am_data.js  am_gridview.js  assets_data.js  assets_filters.js  assets_state.js  entry.js  entry.ts  extension.js.old  global_state.js  majoor_assets_manager.js  majoor_filemanager.js  ui_bulk_bar.js  ui_cards.js  ui_context_menu.js  ui_grid.js  ui_grid.js.bak  ui_gridview.js  ui_settings.js  ui_sidebar.js  ui_status_dot.js  ui_theme.js  ui_viewer.js  workflow_hash.js
js/api/: client.js  client.ts  clientAuth.js  clientOps.js  clientOps.ts  endpoints.js  endpoints.ts  fetchUtils.js
js/app/: DialogTemplates.js  DialogTemplates.ts  assetUrls.js  assetUrls.ts  bootstrap.js  bootstrap.ts  comfyApiBridge.js  comfyApiBridge.ts  config.js  config.ts  dialogs.js  dialogs.ts  events.js  hostAdapter.js  i18n.js  i18n.ts  metrics.js  metrics.ts  runtimeState.js  runtimeState.ts  settings.js  settingsStore.js  style.js  style.ts  toast.js  versionCheck.js  versionCheck.ts
js/components/: Badges.js  Card.js  ContextMenu.js  FolderCard.js  RatingEditor.js  RatingEditor.ts  SidebarView.js  TagsEditor.js  TagsEditor.ts  VideoControls.js  VideoControls.ts  Viewer.js  ViewerRuntime.js  ViewerRuntime.ts  Viewer_impl.js  buttons.js
js/features/: vue_adapter.js
js/grid/: events.js  fetch.js  load.js  render.js  state.js
js/integration/: comfy_send_to_am.js  comfy_send_to_am.ts
js/stores/: getOptionalPanelStore.js  getOptionalRuntimeStore.ts  panelStateBridge.js  panelStateBridge.ts  runtimeEnrichmentState.js  runtimeEnrichmentState.ts  usePanelStore.js  usePanelStore.ts  useRuntimeStore.js  useRuntimeStore.ts
js/tests/: api_client_dedupe.vitest.mjs  assets_grid_host_state.vitest.mjs  auth_refresh_race.vitest.mjs  browser_navigation_controller.vitest.mjs  browser_perf_extended.vitest.mjs  client_auth_token.vitest.mjs  comfy_api_bridge.vitest.mjs  context_controller.vitest.mjs  (+86 more)
js_dist/: entry.js
mjr_am_backend/: __init__.py  config.py  custom_roots.py  deps.py  observability.py  observability_install.py  observability_runtime.py  path_utils.py  probe_router.py  routes_compat.py  runtime_activity.py  settings.py  shared.py  startup_logging.py  tool_candidates.py  tool_detect.py  utils.py
mjr_am_shared/: __init__.py  errors.py  hashing.py  log.py  result.py  scan_throttle.py  types.py  version.py
plugins/: README.md  __init__.py
scripts/: build_user_guide_html.py  check_cc_changed.py  install-requirements.py  install_local_hooks.py  junit_to_html.py  make_release_zip.ps1  repo_health.py  run_changed_quality_gate.py  run_quality_gate.py  tag_drift_doctor.py  untrack_restored_files.ps1
server/: __init__.py  config.py  emoji.py  generation_metadata.py  hooks.py  index_db.py  logger.py  metadata.py  metadata_generation.py  mjr_collections.py  routes.py  utils.py  watcher.py
shared/: __init__.py  log.py  result.py  scan_throttle.py  time.py  types.py  version.py
tests/: README.md  __init__.py  conftest.py  repo_root.py  run_tests_all.bat  test_error_helpers.py  test_filesystem_kickoff_background_scan_race.py  test_guess_content_type_for_file.py  test_routes_compat.py  test_settings.py  test_tool_detect.py
tools/: fix_silent_catches.js
ui/: entry.ts
wiki/: AI-Features.md  Configuration-and-Security.md  Development-and-Architecture.md  Home.md  Installation-and-Setup.md  Maintenance-and-Testing.md  Plugin-System.md  Privacy-and-Offline.md  Publishing-the-Wiki.md  Search-Ratings-Tags-and-Collections.md  Using-the-Assets-Manager.md  Viewer-and-MFV.md  _Sidebar.md
(+1419 files in other folders)
